--- a/css/card.css
+++ b/css/card.css
@@ -53,6 +53,8 @@ div.metabookcard > hr {
     font-family: courier,fixed;}
 .metabookcard span.user { 
     color: green; font-size: 125%; font-style: italic;}
+.metabookcard span.mbmedia {
+    cursor: pointer;}
 .metabookcard span.outlet { color: green;}
 .metabookcard span.overlay { 
     color: green; font-size: 125%; font-style: normal;
@@ -134,9 +136,11 @@ div.metabookcard > hr {
 .metabookcardbody div.userpic,
 .metabookcardbody div.sourcepic  {
     float: left; clear: left; margin-right: 3px;
-    width: 50px; height: 50px; font-size: 32px;
+    width: 50px; height: 50px; font-size: 40px;
     text-align: center; vertical-align: top;
-    color: black; font-weight: bold; overflow: hidden;
+    font-weight: bold; overflow: hidden;
+    color: rgba(245, 245, 245, 0.56);
+    text-stroke: 2px black; -webkit-text-stroke: 2px black;
     /* This lines up with the padding on metabookcardbody */
     margin-top: -6px;}
 .metabookcardbody div.userpic.sbooknopic,
